Apply suggested tweaks